external-crates/move/crates/move-compiler/tests/move_2024/matching/bind_subject.exp
error[E13003]: feature is under active development
  ┌─ tests/move_2024/matching/bind_subject.move:3:17
  │
3 │     public enum Option<T> has drop {
  │                 ^^^^^^ Enums are not supported in bytecode.
  │
  = This feature is currently in development.

warning[W09003]: unused assignment
   ┌─ tests/move_2024/matching/bind_subject.move:16:13
   │
16 │             z => default(z),
   │             ^ Unused assignment for variable 'z'. Consider removing, replacing with '_', or prefixing with '_' (e.g., '_z')
   │
   = This warning can be suppressed with '#[allow(unused_assignment)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

